--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -53,6 +53,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="UserName"
+        android:drawableStart="@drawable/ic_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -66,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="264dp"
         android:ems="10"
+        android:drawableStart="@drawable/ic_baseline_lock_24"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
