--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="UserName"
+        android:hint="Username"
         android:drawableStart="@drawable/ic_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="264dp"
         android:ems="10"
+        android:hint="Password"
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
