Signup working slighty
Can make multiple accounts with same name (FIX THIS)
Maybe reconsider password functionallity?

--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -53,7 +53,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Username"
-        android:drawableStart="@drawable/ic_login"
+        android:drawableStart="@drawable/ic_person"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -68,7 +68,7 @@
         android:layout_marginBottom="264dp"
         android:ems="10"
         android:hint="Password"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
+        android:drawableStart="@drawable/ic_lock"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
