Vælger lige at commit det jeg har så jeg kan lave videre på det på den anden pc, eneste view hvor appen cracher er start viewt hvis man trykker sale offer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,8 @@
         app:layout_constraintVertical_bias="0.224"
         />
 
-
     <Button
-        android:id="@+id/LoginBtn"
+        android:id="@+id/BtnCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/SomeKindOfYellow"
@@ -33,7 +32,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.893"
-        android:text="Login" />
+        android:text="Create SaleOffer" />
+
+    <Button
+        android:id="@+id/LoginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/SomeKindOfYellow"
+        android:text="Login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.626" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
