Catagory Database upload virker

--- a/app/src/main/res/layout/activity_create_sale_offer.xml
+++ b/app/src/main/res/layout/activity_create_sale_offer.xml
@@ -74,7 +74,7 @@
 
 
     <Button
-        android:id="@+id/BtnCreate"
+        android:id="@+id/BtnCreateSaleOffers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Opret Salgsopslag"
@@ -82,4 +82,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/WritePrice" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
