--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         />
 
     <Button
-        android:id="@+id/BtnCreate"
+        android:id="@+id/BtnCreateSale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/SomeKindOfYellow"
