--- a/app/src/main/res/layout/activity_create_sale_offer.xml
+++ b/app/src/main/res/layout/activity_create_sale_offer.xml
@@ -83,4 +83,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/WritePrice" />
 
+    <Button
+        android:id="@+id/BtnCreateSaleGoToAllItems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Se alle salgsopsalg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnCreateSaleOffers" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
